[package]
name = "squisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf = { version = "1.0", features = ["KHR_lights_punctual"] }
image = "0.24"
seahash = "4.1.0"

[dev-dependencies]
ktx2 = "0.3"
