[package]
name = "squisher"
description = "Creates optimised, platform specific glTF files"
authors = ["Let Eyes Equals Two"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
env_logger = "0.10.0"
fs-err = "2.9.0"
gltf = { version = "1.0", features = ["KHR_lights_punctual"] }
image = "0.24"
log = "0.4.17"
seahash = "4.1.0"
tempfile = "3.4.0"

[dev-dependencies]
ktx2 = "0.3"
